--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
                 </div>
             </div>
         </section>
-
     </div>
+    <section class="section-numeros">
+        <div class="div-numeros">
+            <h1 class="h1-numeros">10K+</h1>
+            <h2 class="h2-numeros">Artes</h2>
+            <h1 class="h1-numeros">200+</h1>
+            <h2 class="h2-numeros">Vendas</h2>
+            <h1 class="h1-numeros">20</h1>
+            <h2 class="h2-numeros">Artistas</h2>
+        </div>
+        <div class="div-texto-numeros">
+            <p class="p-numeros">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Congue malesuada amet
+                pretium lacus. Id
+                potenti diam et cras odio viverra. Amet, velit ut hac sit. Enim ultricies mauris mattis nunc semper.
+            </p>
+            <a class="p-numeros">Lorem ipsum</a>
+            <p class="p-numeros">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Congue malesuada amet
+                pretium lacus. Id
+                potenti diam et cras odio viverra. Amet, velit ut hac sit. Enim ultricies mauris mattis nunc semper.
+            </p>
+            <a class="a-numeros">Loren ipsum</a>
+        </div>
+        <div class="div-imagem-numeros">
+            <img src="/Arquivos/assets/assets/banner.png">
+        </div>
+    </section>
+
 </body>
